Fixed image to have dymanic cropping

--- a/themes/source-flask-theme/src/sass/section/_moreabout.scss
+++ b/themes/source-flask-theme/src/sass/section/_moreabout.scss
@@ -13,8 +13,10 @@
     }
 
   .flavor-img {
-    width: 100%;
+    object-fit: cover;
     border-radius: 30px;
+    width: 100%;
+    max-height: 40em;
   }
 }
 
